@@ -5904,3 +5904,7 @@ PACKAGE: 2.2.99.2
 
 2006-12-06 moj
  * Switched pages->pagerange
+
+2006-12-07 cjg
+ * Fixed issue with no columns in items and review
+
